feat: add authenticated client interoperability
